Archive2/d0/a4810877146542/main.cpp
#include <iostream>
#include <map>
 
int main()
{  
    map< int, int > map1;
 
    map1.insert( map< int, int >::value_type(1, 35));
    std::cout << "Found " << search->second << '\n';
   
}